<resources>
    <string name="app_name">BiciApp-Admin</string>
    <string name="title_home">Reservas</string>
    <string name="title_dashboard">Bicicletas</string>
    <string name="title_notifications">Usuarios</string>
    <string name="title_estaciones">Estaciones</string>
    <string name="title_candados">Candados</string>

    <string name="menu_home">Crear Reserva</string>
    <string name="menu_dashboard">Crear Bicicleta</string>
    <string name="menu_notifications">Crear Usuario</string>
    <string name="menu_estaciones">Crear Estación</string>

    <string name="crear_usuario_nombre_hint">Belén Cuesta</string>
    <string name="crear_usuario_nusuario_hint">Belen1994</string>
    <string name="crear_usuario_cedula_hint">170982710</string>
    <string name="crear_usuario_direccion_hint">Sabanilla N78-10 y Av. del Maestro</string>
    <string name="crear_usuario_correo_hint">belen.cuesta@epn.edu.ec</string>
    <string name="crear_usuario_rfid_hint">10029382910222</string>
    <string name="crear_usuario_telefono_hint">09999999999</string>
    <string name="crear_usuario_button_title">Aceptar</string>
    <string name="crear_usuario_title">Crear usuario</string>

    <string name="crear_estacion_nombre_hint">Seminario Mayor</string>
    <string name="crear_estacion_direccion_hint">Av. América y Cristóbal Colón</string>
    <string name="crear_estacion_latitud_hint">-0.78273</string>
    <string name="crear_estacion_longitud_hint">-78.98087</string>
    <string name="crear_estacion_title">Crear estación</string>
    <string name="search_title">Búsqueda</string>

</resources>
