<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NuevoCliente"
    android:background="@drawable/curve_shap"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:background="@color/cardview_light_background"
        android:gravity="center"
        android:text="@string/crear_estacion_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombreE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre:"
        android:textColor="@android:color/background_light"
        android:paddingLeft="32dp"
        android:paddingTop="64dp"
        android:textStyle="bold"
        android:layout_below="@id/textView3"/>

    <EditText
        android:id="@+id/editTextNombreE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crear_estacion_nombre_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDireccionE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_below="@+id/textView6"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:text="Dirección:"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:textStyle="bold"
        android:layout_below="@id/editTextNombreE"/>

    <EditText
        android:id="@+id/editTextDireccionE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crear_estacion_direccion_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLatitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombreE"
        android:layout_below="@+id/textView7"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:text="Latitud:"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:textStyle="bold"
        android:layout_below="@id/editTextDireccionE"/>

    <EditText
        android:id="@+id/editTextLatitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crear_estacion_latitud_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextLongitud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/background_light"
        android:text="Longitud:"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:textStyle="bold"
        android:layout_below="@id/editTextLatitud"/>

    <EditText
        android:id="@+id/editTextLongitud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/crear_estacion_longitud_hint"
        android:inputType="numberSigned|number|numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>


    <Button
        android:id="@+id/btnCrearE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLongitud"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/curve_shap"
        android:text="@string/crear_usuario_button_title"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        />




</RelativeLayout>